[gd_scene load_steps=7 format=3 uid="uid://c5xffcvhp1ro1"]

[ext_resource type="Script" uid="uid://cj6mtqi0gt3c3" path="res://Enemigos/tunche.gd" id="1_8tuwp"]
[ext_resource type="Texture2D" uid="uid://dv6nl5a6scjjx" path="res://img/Enemigos/tunche.png" id="1_k115g"]
[ext_resource type="AudioStream" uid="uid://bx1l8o4es1pah" path="res://img/Fondos/tunche molesto.mp3" id="3_atjna"]
[ext_resource type="AudioStream" uid="uid://xwvp3jrbnhdo" path="res://img/Fondos/tunche - chulla  piedra y cacao.mp3" id="4_tcr7w"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_256sk"]
radius = 71.0
height = 198.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_evmd6"]
size = Vector2(129, 184)

[node name="tunche" type="CharacterBody2D"]
position = Vector2(14, 6)
script = ExtResource("1_8tuwp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(114, 405)
shape = SubResource("CapsuleShape2D_256sk")

[node name="balita" type="Marker2D" parent="."]
position = Vector2(232, 432)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(134, 403)
scale = Vector2(0.502, 0.502)
texture = ExtResource("1_k115g")

[node name="balita2" type="Marker2D" parent="."]
position = Vector2(-3, 431)

[node name="shoot_timer" type="Timer" parent="."]
wait_time = 0.001

[node name="Area2D" type="Area2D" parent="." groups=["enemigo"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(118, 402)
shape = SubResource("RectangleShape2D_evmd6")

[node name="molesto" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_atjna")
volume_db = 24.0

[node name="piedrita" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_tcr7w")
volume_db = 24.0

[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
